RESOLVED FIXED153446
Resolving direction and writing mode properties should not mutate document
https://bugs.webkit.org/show_bug.cgi?id=153446
Summary Resolving direction and writing mode properties should not mutate document
Antti Koivisto
Reported 2016-01-25 13:58:55 PST
Don't set writingModeSetOnDocumentElement and directionSetOnDocumentElement bits during style resolve.
Attachments
patch (13.25 KB, patch)
2016-01-25 14:02 PST, Antti Koivisto
buildbot: commit-queue-
Archive of layout-test-results from ews101 for mac-yosemite (1.07 MB, application/zip)
2016-01-25 14:47 PST, Build Bot
no flags
Archive of layout-test-results from ews104 for mac-yosemite-wk2 (1.21 MB, application/zip)
2016-01-25 14:50 PST, Build Bot
no flags
patch (13.25 KB, patch)
2016-01-25 15:00 PST, Antti Koivisto
kling: review+
Antti Koivisto
Comment 1 2016-01-25 14:02:06 PST
Build Bot
Comment 2 2016-01-25 14:47:15 PST
Comment on attachment 269790 [details] patch Attachment 269790 [details] did not pass mac-ews (mac): Output: http://webkit-queues.webkit.org/results/738254 New failing tests: fast/multicol/vertical-rl/break-properties.html fast/block/positioning/vertical-rl/fixed-positioning.html
Build Bot
Comment 3 2016-01-25 14:47:17 PST
Created attachment 269794 [details] Archive of layout-test-results from ews101 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews101 Port: mac-yosemite Platform: Mac OS X 10.10.5
Build Bot
Comment 4 2016-01-25 14:50:45 PST
Comment on attachment 269790 [details] patch Attachment 269790 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-queues.webkit.org/results/738256 New failing tests: fast/multicol/vertical-rl/break-properties.html fast/block/positioning/vertical-rl/fixed-positioning.html
Build Bot
Comment 5 2016-01-25 14:50:47 PST
Created attachment 269795 [details] Archive of layout-test-results from ews104 for mac-yosemite-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews104 Port: mac-yosemite-wk2 Platform: Mac OS X 10.10.5
Antti Koivisto
Comment 6 2016-01-25 15:00:34 PST
Antti Koivisto
Comment 7 2016-01-25 15:33:48 PST
Note You need to log in before you can comment on or make changes to this bug.